--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# Compiled class file
-*.class
+# Please keep in mind:
+# - If you need to ignore files on your local machine only, please use .git/info/exclude instead .gitignore
+# - Project specified ignore rules must be located in project directory only
 
-# Log file
-*.log
+# Eclipse project files
+.settings
+.classpath
+.project
+.metadata
+.mymetadata
+.springBeans
+.externalToolBuilders
+.gradle
 
-# BlueJ files
-*.ctxt
+# IntelliJ Idea project files
+.idea
+.idea/*
+*.iml
+*.ipr
+*.iws
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Always ignore these directories/files
+target
+build
+*/target/*
+*/build/*
+logs
+bin
+root/xms/artifacts
+test-output
